--- a/src/features/components/layout/Layout.module.css
+++ b/src/features/components/layout/Layout.module.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding-top: 90px;
+  padding-top: calc(90px + 40px);
   flex-direction: column;
-  min-height: calc(100vh - 90px);
+  min-height: calc(100vh - (90px + 40px));
   background-color: whitesmoke;
 }
