--- a/src/features/components/header/Header.module.css
+++ b/src/features/components/header/Header.module.css
@@ -1,3 +1,5 @@
+@import url('./../../../assets/styles/colors.css');
+
 .header {
   height: 90px;
   display: flex;
@@ -7,6 +9,6 @@
   position: fixed;
   width: 100%;
   z-index: 1;
-  background-color: silver;
-  color: white;
+  background-color: var(--background-color-header);
+  color: var(--text-color-light);
 }
