--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -4,4 +4,5 @@
     background-color: var(--backgroung-color-content);
     padding: 10px 50px 20px 50px;
     border-radius: 5px;    
+    min-width: 80vw;
 }
