feat: add shopping cart in product card

--- a/src/assets/styles/colors.css
+++ b/src/assets/styles/colors.css
@@ -2,4 +2,5 @@
     --background-color-header: silver;
     --backgroung-color-content: white;
     --text-color-light: white;
+    --color-primary: lightseagreen; 
 }
