--- a/src/pages/Page.module.css
+++ b/src/pages/Page.module.css
@@ -6,3 +6,10 @@
   border-radius: 10px;
   width: 90vw;
 }
+
+.page-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
